Update & Add articles pages 3

--- a/enVision-Magazine/enVisionMagazine-e4.html
+++ b/enVision-Magazine/enVisionMagazine-e4.html
@@ -59,18 +59,17 @@
             <a href="travel.html"><h5> Travel </h5></a>
             <a href="food.html"><h5> Food </h5></a>
     </div>
-
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Food </div>
-            <img src="images/proteins.jpg">
-            <h3>  Proteins </h3>
+            <div class="tag">Economics </div>
+            <img src="images/capitalism.jpg">
+            <h3> The Birth of Capitalism </h3>
             <p>
-            Proteins are body-building nutrients made of amino acids. Found in meat, eggs, dairy, beans, and nuts, they repair tissue, build muscles, and support enzymes.<br>
+            Capitalism emerged in Europe during the late Middle Ages and Renaissance, fueled by trade, banking, and the growth of markets. <br>
             <br>
-            Complete proteins (like those in meat) have all essential amino acids. Vegetarians combine plant sources for full benefit. Protein intake matters for growth, fitness, and healing.<br>
+            Thinkers like Adam Smith later articulated its principles in The Wealth of Nations (1776), emphasizing free markets, competition, and private ownership. Capitalism encouraged innovation, industry, and global expansion, laying the foundation for modern economies. However, it also sparked inequalities, prompting debates about labor rights and regulation.<br>
             <br>
-            Too little weakens the body; too much can stress kidneys. It’s all about balance—strong bodies start with smart protein.
+            Despite its challenges, capitalism transformed societies, fostering rapid technological progress and higher living standards. Its birth marked a turning point in human history, shaping economic and political systems that continue to dominate today.
             </p>
         </div>
                 <div id="interactives">
