--- a/enVision-Magazine/enVisionMagazine-e5.html
+++ b/enVision-Magazine/enVisionMagazine-e5.html
@@ -59,18 +59,17 @@
             <a href="travel.html"><h5> Travel </h5></a>
             <a href="food.html"><h5> Food </h5></a>
     </div>
-
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Food </div>
-            <img src="images/proteins.jpg">
-            <h3>  Proteins </h3>
+            <div class="tag">Economics </div>
+            <img src="images/communism.jpg">
+            <h3> Communism: An Economic Alternative </h3>
             <p>
-            Proteins are body-building nutrients made of amino acids. Found in meat, eggs, dairy, beans, and nuts, they repair tissue, build muscles, and support enzymes.<br>
+            Communism, rooted in the writings of Karl Marx and Friedrich Engels, emerged as a critique of capitalism’s inequalities. It envisioned a classless society where property and production are communally owned, eliminating exploitation. <br>
             <br>
-            Complete proteins (like those in meat) have all essential amino acids. Vegetarians combine plant sources for full benefit. Protein intake matters for growth, fitness, and healing.<br>
+            In the 20th century, nations like the Soviet Union and China adopted communist systems, aiming to redistribute wealth and empower workers. While communism inspired movements for equality, its practice often faced criticism for authoritarianism and inefficiency.<br>
             <br>
-            Too little weakens the body; too much can stress kidneys. It’s all about balance—strong bodies start with smart protein.
+            Economically, it shaped global politics during the Cold War, standing as capitalism’s rival. Though its legacy is controversial, communism remains influential as an economic theory and social ideal challenging inequality.
             </p>
         </div>
                 <div id="interactives">
