--- a/enVision-Magazine/enVisionMagazine-f4.html
+++ b/enVision-Magazine/enVisionMagazine-f4.html
@@ -63,14 +63,14 @@
     <div class="articles">
         <div class="arti full-arti">
             <div class="tag">Food </div>
-            <img src="images/proteins.jpg">
-            <h3>  Proteins </h3>
+            <img src="images/bread.jpg">
+            <h3>  The Story of Bread: Humanity’s Staple Food </h3>
             <p>
-            Proteins are body-building nutrients made of amino acids. Found in meat, eggs, dairy, beans, and nuts, they repair tissue, build muscles, and support enzymes.<br>
+            Bread is one of humanity’s oldest and most universal foods. Evidence shows that people baked flatbreads over 12,000 years ago, even before agriculture was fully developed. With the rise of farming, wheat, barley, and other grains became staples, turning bread into a daily necessity across cultures.<br>
             <br>
-            Complete proteins (like those in meat) have all essential amino acids. Vegetarians combine plant sources for full benefit. Protein intake matters for growth, fitness, and healing.<br>
+            From simple loaves in ancient Egypt to baguettes in France and naan in South Asia, bread reflects both tradition and innovation.<br>
             <br>
-            Too little weakens the body; too much can stress kidneys. It’s all about balance—strong bodies start with smart protein.
+            It symbolizes survival, community, and hospitality. More than food, bread carries cultural meaning, appearing in rituals and language as a symbol of life itself. Its story continues as a shared global heritage.
             </p>
         </div>
                 <div id="interactives">
