--- a/enVision-Magazine/enVisionMagazine-f5.html
+++ b/enVision-Magazine/enVisionMagazine-f5.html
@@ -63,14 +63,14 @@
     <div class="articles">
         <div class="arti full-arti">
             <div class="tag">Food </div>
-            <img src="images/proteins.jpg">
-            <h3>  Proteins </h3>
+            <img src="images/italian-cuisine.jpg">
+            <h3>  Italian Cuisine: A Taste of Tradition </h3>
             <p>
-            Proteins are body-building nutrients made of amino acids. Found in meat, eggs, dairy, beans, and nuts, they repair tissue, build muscles, and support enzymes.<br>
+           Italian cuisine is celebrated worldwide for its simplicity, freshness, and flavor. Rooted in regional traditions, it emphasizes quality ingredients like olive oil, tomatoes, pasta, and cheese. Dishes such as pizza from Naples and pasta from Rome highlight Italy’s culinary diversity.<br>
             <br>
-            Complete proteins (like those in meat) have all essential amino acids. Vegetarians combine plant sources for full benefit. Protein intake matters for growth, fitness, and healing.<br>
+            Italian cooking values balance—pairing flavors without overcomplicating recipes. Beyond food, it represents culture and family, where meals bring people together.<br>
             <br>
-            Too little weakens the body; too much can stress kidneys. It’s all about balance—strong bodies start with smart protein.
+            From rustic countryside kitchens to fine dining restaurants, Italian cuisine has become a global ambassador of taste and tradition. Its enduring appeal lies in turning simple ingredients into unforgettable experiences that connect people across cultures and generations.
             </p>
         </div>
                 <div id="interactives">
