Update & Add articles pages 4

--- a/enVision-Magazine/enVisionMagazine-g4.html
+++ b/enVision-Magazine/enVisionMagazine-g4.html
@@ -10,7 +10,7 @@
 <script type="text/javascript" src="js/indexVM.js"></script>
 </head>
     <body>
-        <header>
+         <header>
              <div class="logo">
                 <img src="images/enVisionG.png">
             </div>
@@ -63,14 +63,15 @@
     <div class="articles">
         <div class="arti full-arti">
             <div class="tag">Geography </div>
-            <img src="images/everest.jpg">
-            <h3> The Ceiling of Earth </h3>
+            <img src="images/New-Zealand.jpg">
+            <h3> New Zealand: A Land of Contrasts </h3>
             <p>
-            Mount Everest, the highest point on Earth at 8,848 meters, is often called the “ceiling of the world.” Located in the Himalayas on the Nepal-Tibet border, it has drawn adventurers and climbers for over a century.<br>
+            New Zealand, an island nation in the southwestern Pacific, is renowned for its diverse and dramatic geography. Comprising the North and South Islands, it features volcanic plateaus, geothermal springs, and lush forests.<br>
             <br>
-            First summited by Sir Edmund Hillary and Tenzing Norgay in 1953, Everest symbolizes human endurance and ambition. The extreme conditions—thin air, sub-zero temperatures, and dangerous terrain—pose significant challenges.<br>
+            The Southern Alps dominate the South Island, offering snow-capped peaks and glacial valleys, while fjords like Milford Sound create breathtaking coastal scenery. The North Island is dotted with active volcanoes and rolling hills.<br>
             <br>
-            Despite risks, thousands attempt the ascent each year. Everest also represents cultural and spiritual significance for local Sherpas. As climate change alters its glaciers, Everest serves as a towering witness to environmental shifts.
+             Surrounded by the Tasman Sea and the Pacific Ocean, New Zealand’s unique landscapes foster rich biodiversity and outdoor adventures, from hiking and skiing to exploring geothermal wonders and pristine beaches.
+            </p>
         </div>
                 <div id="interactives">
           <div class="icon-container">
