--- a/enVision-Magazine/enVisionMagazine-g5.html
+++ b/enVision-Magazine/enVisionMagazine-g5.html
@@ -10,7 +10,7 @@
 <script type="text/javascript" src="js/indexVM.js"></script>
 </head>
     <body>
-        <header>
+         <header>
              <div class="logo">
                 <img src="images/enVisionG.png">
             </div>
@@ -63,14 +63,15 @@
     <div class="articles">
         <div class="arti full-arti">
             <div class="tag">Geography </div>
-            <img src="images/everest.jpg">
-            <h3> The Ceiling of Earth </h3>
+            <img src="images/Mediterranean-Sea.jpg">
+            <h3> The Formation and Significance of the Mediterranean Sea </h3>
             <p>
-            Mount Everest, the highest point on Earth at 8,848 meters, is often called the “ceiling of the world.” Located in the Himalayas on the Nepal-Tibet border, it has drawn adventurers and climbers for over a century.<br>
+            The Mediterranean Sea, a semi-enclosed body of water between Europe, Asia, and Africa, was shaped by tectonic forces over millions of years. The northward movement of the African plate collided with the Eurasian plate, creating the Mediterranean basin.<br>
             <br>
-            First summited by Sir Edmund Hillary and Tenzing Norgay in 1953, Everest symbolizes human endurance and ambition. The extreme conditions—thin air, sub-zero temperatures, and dangerous terrain—pose significant challenges.<br>
+            Ancient seas like the Tethys gradually closed, and the Messinian Salinity Crisis nearly dried the region about six million years ago. Eventually, waters from the Atlantic refilled it through the Strait of Gibraltar.<br>
             <br>
-            Despite risks, thousands attempt the ascent each year. Everest also represents cultural and spiritual significance for local Sherpas. As climate change alters its glaciers, Everest serves as a towering witness to environmental shifts.
+            Today, its unique geography supports rich ecosystems, fertile coastlines, and vital trade routes. The Mediterranean continues to influence climate, culture, economy, and global maritime connectivity.
+            </p>
         </div>
                 <div id="interactives">
           <div class="icon-container">
