--- a/enVision-Magazine/enVisionMagazine-h2.html
+++ b/enVision-Magazine/enVisionMagazine-h2.html
@@ -62,15 +62,16 @@
 
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Geography </div>
-            <img src="images/everest.jpg">
-            <h3> The Ceiling of Earth </h3>
+            <div class="tag">History </div>
+            <img src="images/babylon.jpg">
+            <h3> Babylon Golden Era </h3>
             <p>
-            Mount Everest, the highest point on Earth at 8,848 meters, is often called the “ceiling of the world.” Located in the Himalayas on the Nepal-Tibet border, it has drawn adventurers and climbers for over a century.<br>
-            <br>
-            First summited by Sir Edmund Hillary and Tenzing Norgay in 1953, Everest symbolizes human endurance and ambition. The extreme conditions—thin air, sub-zero temperatures, and dangerous terrain—pose significant challenges.<br>
-            <br>
-            Despite risks, thousands attempt the ascent each year. Everest also represents cultural and spiritual significance for local Sherpas. As climate change alters its glaciers, Everest serves as a towering witness to environmental shifts.
+            The Golden Era of Babylon, around the 18th to 6th centuries BCE, was marked by immense cultural and scientific advancements.<br> 
+            <br> 
+            Under King Hammurabi and later Nebuchadnezzar II, Babylon became a center of law, astronomy, mathematics, and architecture. The famous Hanging Gardens, one of the Seven Wonders of the Ancient World, symbolized its grandeur.<br> 
+            <br> 
+            Babylonian scholars developed early forms of algebra and mapped celestial bodies. Its legal code, the Code of Hammurabi, influenced future civilizations. Babylon's influence extended across Mesopotamia, becoming a beacon of innovation and power. The era reflects humanity’s capacity for creativity and governance in the ancient world.
+            </p>
         </div>
                 <div id="interactives">
           <div class="icon-container">
