--- a/enVision-Magazine/enVisionMagazine-h3.html
+++ b/enVision-Magazine/enVisionMagazine-h3.html
@@ -62,15 +62,17 @@
 
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Geography </div>
-            <img src="images/everest.jpg">
-            <h3> The Ceiling of Earth </h3>
+            <div class="tag">History</div>
+            <img src="images/Spies.jpeg">
+            <h3> Spies War in WWII </h3>
             <p>
-            Mount Everest, the highest point on Earth at 8,848 meters, is often called the “ceiling of the world.” Located in the Himalayas on the Nepal-Tibet border, it has drawn adventurers and climbers for over a century.<br>
-            <br>
-            First summited by Sir Edmund Hillary and Tenzing Norgay in 1953, Everest symbolizes human endurance and ambition. The extreme conditions—thin air, sub-zero temperatures, and dangerous terrain—pose significant challenges.<br>
-            <br>
-            Despite risks, thousands attempt the ascent each year. Everest also represents cultural and spiritual significance for local Sherpas. As climate change alters its glaciers, Everest serves as a towering witness to environmental shifts.
+                World War II featured extensive espionage and intelligence operations on all sides of the conflict.
+                Nations relied heavily on spies, codebreakers, and secret agents to gain an advantage. <br>
+                <br>
+                The Allies had notable successes, such as the British codebreaking efforts at Bletchley Park, where Alan Turing and his team deciphered the German Enigma code. <br>
+                <br>
+                The Soviet Union used deep-cover agents in Europe and the United States, while the U.S. employed deception strategies like Operation Bodyguard to mislead the Axis. Germany's Abwehr and Japan’s intelligence agencies also ran vast networks. Espionage played a critical role in shaping wartime decisions and ultimately influenced the outcome of the war.
+            </p>
         </div>
                 <div id="interactives">
           <div class="icon-container">
@@ -155,7 +157,7 @@
             </div>
         </a>
     </div>
- 
+    
 </section>
 <!-- Footer -->
 
