--- a/enVision-Magazine/enVisionMagazine-h4.html
+++ b/enVision-Magazine/enVisionMagazine-h4.html
@@ -62,15 +62,16 @@
 
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Geography </div>
-            <img src="images/everest.jpg">
-            <h3> The Ceiling of Earth </h3>
+            <div class="tag">History </div>
+            <img src="images/babylon.jpg">
+            <h3> Hannibal: Rome's Number one Enemey </h3>
             <p>
-            Mount Everest, the highest point on Earth at 8,848 meters, is often called the “ceiling of the world.” Located in the Himalayas on the Nepal-Tibet border, it has drawn adventurers and climbers for over a century.<br>
-            <br>
-            First summited by Sir Edmund Hillary and Tenzing Norgay in 1953, Everest symbolizes human endurance and ambition. The extreme conditions—thin air, sub-zero temperatures, and dangerous terrain—pose significant challenges.<br>
-            <br>
-            Despite risks, thousands attempt the ascent each year. Everest also represents cultural and spiritual significance for local Sherpas. As climate change alters its glaciers, Everest serves as a towering witness to environmental shifts.
+            Hannibal Barca, the Carthaginian general, remains one of history’s greatest military strategists. Known for his bold crossing of the Alps with war elephants during the Second Punic War, he shocked Rome and struck fear into its armies.<br> 
+            <br> 
+            His tactical brilliance was showcased at the Battle of Cannae, where he encircled and annihilated a much larger Roman force. Although ultimately defeated, Hannibal’s campaigns changed military history, inspiring leaders centuries later.<br> 
+            <br> 
+            His legacy lies not just in victories, but in demonstrating the power of intelligence, innovation, and persistence in warfare. Hannibal stands as a timeless symbol of audacity against overwhelming odds.
+            </p>
         </div>
                 <div id="interactives">
           <div class="icon-container">
@@ -172,6 +173,5 @@
 <!-- Footer -->
 
 <script type="module" src="js/static-interactives.js"> </script>
-
 	</body>
 </html>
