--- a/enVision-Magazine/enVisionMagazine-h5.html
+++ b/enVision-Magazine/enVisionMagazine-h5.html
@@ -62,15 +62,16 @@
 
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Geography </div>
-            <img src="images/everest.jpg">
-            <h3> The Ceiling of Earth </h3>
+            <div class="tag">History </div>
+            <img src="images/columbus.jpg">
+            <h3> Columbus and the Discovery of America </h3>
             <p>
-            Mount Everest, the highest point on Earth at 8,848 meters, is often called the “ceiling of the world.” Located in the Himalayas on the Nepal-Tibet border, it has drawn adventurers and climbers for over a century.<br>
-            <br>
-            First summited by Sir Edmund Hillary and Tenzing Norgay in 1953, Everest symbolizes human endurance and ambition. The extreme conditions—thin air, sub-zero temperatures, and dangerous terrain—pose significant challenges.<br>
-            <br>
-            Despite risks, thousands attempt the ascent each year. Everest also represents cultural and spiritual significance for local Sherpas. As climate change alters its glaciers, Everest serves as a towering witness to environmental shifts.
+            In 1492, Christopher Columbus set sail across the Atlantic seeking a new route to Asia but instead reached the Caribbean, marking the start of Europe’s encounter with the Americas. His voyages opened the way for exploration, colonization, and cultural exchanges that transformed the world.<br> 
+            <br> 
+            While Columbus believed he had found Asia, his journey connected continents, fueling trade and reshaping global history.<br> 
+            <br> 
+           His discovery brought both opportunities and devastation—advancing knowledge but also displacing indigenous peoples. Columbus’s legacy is complex: he symbolizes human curiosity and ambition while reminding us of the profound consequences of exploration and conquest on civilizations.
+            </p>
         </div>
                 <div id="interactives">
           <div class="icon-container">
@@ -170,7 +171,7 @@
 </footer>
 
 <!-- Footer -->
-
+ 
 <script type="module" src="js/static-interactives.js"> </script>
 
 	</body>
