Update & Add articles pages 5

--- a/enVision-Magazine/enVisionMagazine-ho4.html
+++ b/enVision-Magazine/enVisionMagazine-ho4.html
@@ -63,14 +63,14 @@
     <div class="articles">
         <div class="arti full-arti">
             <div class="tag">Hobbies </div>
-            <img src="images/garden.jpg">
-            <h3>  Garden Design Development </h3>
+            <img src="images/drawing.jpg">
+            <h3>  Drawing as a Hobby: A Creative Escape </h3>
             <p>
-            Garden design reflects culture and philosophy. Ancient Egyptians shaped orderly courtyards, Persians designed paradise gardens, and Chinese landscapes evoked harmony with nature.<br>
+            Drawing is one of the oldest forms of human expression, offering both relaxation and creativity. As a hobby, it allows individuals to capture ideas, emotions, and observations on paper. From sketching landscapes to doodling abstract shapes, drawing provides a mindful escape from daily stress.<br>
             <br>
-            The Renaissance brought symmetry, while English gardens favored natural flow. In modern times, urban spaces embrace vertical and sustainable gardens.<br>
+            It enhances observation skills, patience, and self-expression, making it accessible to people of all ages. With modern tools, from pencils to digital tablets, drawing has evolved into a versatile activity.<br>
             <br>
-            Whether Zen simplicity or floral extravagance, gardens offer more than beauty—they reveal human relationships with nature, creativity, and peace.
+            Beyond producing art, drawing nurtures imagination and personal growth, reminding us that creativity is not just for artists but for everyone seeking expression.
             </p>
         </div>
                 <div id="interactives">
