--- a/enVision-Magazine/enVisionMagazine-ho5.html
+++ b/enVision-Magazine/enVisionMagazine-ho5.html
@@ -63,14 +63,14 @@
     <div class="articles">
         <div class="arti full-arti">
             <div class="tag">Hobbies </div>
-            <img src="images/garden.jpg">
-            <h3>  Garden Design Development </h3>
+            <img src="images/domino.jpg">
+            <h3>  Domino Building as a Hobby: Precision and Patience </h3>
             <p>
-            Garden design reflects culture and philosophy. Ancient Egyptians shaped orderly courtyards, Persians designed paradise gardens, and Chinese landscapes evoked harmony with nature.<br>
+            Domino building is more than lining up tiles—it’s an art form requiring creativity, patience, and precision. Enthusiasts design intricate patterns and massive chain reactions, often spending hours or days setting up thousands of dominoes for a few seconds of spectacular motion.<br>
             <br>
-            The Renaissance brought symmetry, while English gardens favored natural flow. In modern times, urban spaces embrace vertical and sustainable gardens.<br>
+            This hobby combines engineering with artistry, as builders experiment with symmetry, color, and complex structures. Beyond entertainment, domino building teaches focus, planning, and resilience when mistakes topple early.<br>
             <br>
-            Whether Zen simplicity or floral extravagance, gardens offer more than beauty—they reveal human relationships with nature, creativity, and peace.
+            It has grown into a global community, with competitions and records inspiring new creations. Domino setups remind us of cause, effect, and the beauty of fleeting achievements.
             </p>
         </div>
                 <div id="interactives">
