--- a/enVision-Magazine/enVisionMagazine-hth4.html
+++ b/enVision-Magazine/enVisionMagazine-hth4.html
@@ -59,18 +59,17 @@
             <a href="travel.html"><h5> Travel </h5></a>
             <a href="food.html"><h5> Food </h5></a>
     </div>
-
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Hobbies </div>
-            <img src="images/garden.jpg">
-            <h3>  Garden Design Development </h3>
+            <div class="tag">Health </div>
+            <img src="images/heart-surgery.jpg">
+            <h3> The First Heart Transplant Surgery </h3>
             <p>
-            Garden design reflects culture and philosophy. Ancient Egyptians shaped orderly courtyards, Persians designed paradise gardens, and Chinese landscapes evoked harmony with nature.<br>
+            On December 3, 1967, Dr. Christiaan Barnard performed the world’s first successful human heart transplant in Cape Town, South Africa. The operation marked a medical milestone, proving that replacing a failing heart with a donor organ was possible.<br>
             <br>
-            The Renaissance brought symmetry, while English gardens favored natural flow. In modern times, urban spaces embrace vertical and sustainable gardens.<br>
+            Although the patient survived only 18 days, the surgery opened the door to modern transplant medicine. Over time, improved surgical techniques and immunosuppressive drugs greatly increased survival rates.<br>
             <br>
-            Whether Zen simplicity or floral extravagance, gardens offer more than beauty—they reveal human relationships with nature, creativity, and peace.
+            Today, heart transplants save thousands of lives each year. This pioneering moment demonstrated the courage of science to push boundaries, transforming what once seemed impossible into a life-saving medical reality.
             </p>
         </div>
                 <div id="interactives">
