--- a/enVision-Magazine/enVisionMagazine-hth5.html
+++ b/enVision-Magazine/enVisionMagazine-hth5.html
@@ -59,18 +59,17 @@
             <a href="travel.html"><h5> Travel </h5></a>
             <a href="food.html"><h5> Food </h5></a>
     </div>
-
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Hobbies </div>
-            <img src="images/garden.jpg">
-            <h3>  Garden Design Development </h3>
+            <div class="tag">Health </div>
+            <img src="images/vaccine.jpg">
+            <h3> The Development of Vaccines: Science Protecting Humanity </h3>
             <p>
-            Garden design reflects culture and philosophy. Ancient Egyptians shaped orderly courtyards, Persians designed paradise gardens, and Chinese landscapes evoked harmony with nature.<br>
+            Vaccine development has been one of medicine’s greatest achievements, saving millions of lives. The journey began in 1796 when Edward Jenner used cowpox to protect against smallpox, laying the foundation for immunology.<br>
             <br>
-            The Renaissance brought symmetry, while English gardens favored natural flow. In modern times, urban spaces embrace vertical and sustainable gardens.<br>
+            Modern vaccines are created through rigorous research, clinical trials, and safety testing, often taking years before approval. Recent advances, such as mRNA technology in COVID-19 vaccines, have accelerated timelines while maintaining safety.<br>
             <br>
-            Whether Zen simplicity or floral extravagance, gardens offer more than beauty—they reveal human relationships with nature, creativity, and peace.
+            Vaccines work by training the immune system to recognize and fight pathogens without causing illness. They not only protect individuals but also communities through herd immunity, making them vital tools in global public health.
             </p>
         </div>
                 <div id="interactives">
