Update & Add articles pages 6

--- a/enVision-Magazine/enVisionMagazine-l3.html
+++ b/enVision-Magazine/enVisionMagazine-l3.html
@@ -31,7 +31,7 @@
     <a href="enVisionMagazine.html">Home</a>
     <a href="about.html">About</a>
     <a href="#contact">Contact</a>
-</div>
+</div>       
 
 <h2> Digital Magazine for diverse topics </h2>
 <section class="allContent">
@@ -62,15 +62,20 @@
 
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Math </div>
-            <img src="images/romannums.jpg">
-           <h3>Roman Numbers </h3>
+            <div class="tag">Languages</div>
+            <img src="images/charles-dickens.jpg">
+            <h3> Charles Dickens </h3>
             <p>
-            Roman numerals—like I, V, X, and M—originated in ancient Rome. Simple and practical for trade and record-keeping, they lacked a symbol for zero.<br>
-            <br>
-            This made complex math difficult. Yet, they lasted for centuries and are still seen today on clocks, book chapters, and movie titles.<br>
-            <br>
-            Though replaced by Hindu-Arabic numerals, Roman numbers remind us of Rome’s lasting influence—elegant, symbolic, and eternal in stone and tradition
+                Charles Dickens (1812–1870) was a renowned English novelist and social critic, widely
+                regarded as one of the greatest writers of the Victorian era.
+                His works vividly portrayed the struggles of the poor and working class, often exposing
+                social injustices of 19th-century England. Among his most famous novels are Oliver Twist,
+                A Christmas Carol, David Copperfield, and Great Expectations. <br>
+                <br>
+                Dickens’s storytelling combined memorable characters, rich detail, and satire to highlight
+                moral and societal issues. His influence on literature and social reform remains profound.
+                He also gave popular public readings of his works, further cementing his status
+                as a literary icon.
             </p>
         </div>
                 <div id="interactives">
@@ -156,7 +161,7 @@
             </div>
         </a>
     </div>
- 
+    
 </section>
 <!-- Footer -->
 
