--- a/enVision-Magazine/enVisionMagazine-l4.html
+++ b/enVision-Magazine/enVisionMagazine-l4.html
@@ -62,15 +62,15 @@
 
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Math </div>
-            <img src="images/romannums.jpg">
-           <h3>Roman Numbers </h3>
+            <div class="tag">languages </div>
+            <img src="images/esperanto.jpg">
+            <h3> Esperanto: A Language for Unity </h3>
             <p>
-            Roman numerals—like I, V, X, and M—originated in ancient Rome. Simple and practical for trade and record-keeping, they lacked a symbol for zero.<br>
+           Esperanto, created in 1887 by L. L. Zamenhof, was designed as a universal language to foster peace and understanding between nations.<br>
             <br>
-            This made complex math difficult. Yet, they lasted for centuries and are still seen today on clocks, book chapters, and movie titles.<br>
+            With simple grammar and a vocabulary drawn from European languages, it aimed to bridge communication barriers without replacing native tongues. Although it never became the global standard, Esperanto has built a worldwide community of speakers dedicated to international friendship. Its resilience lies in its ideals:<br>
             <br>
-            Though replaced by Hindu-Arabic numerals, Roman numbers remind us of Rome’s lasting influence—elegant, symbolic, and eternal in stone and tradition
+            promoting equality, mutual respect, and cultural exchange. Esperanto represents humanity’s dream of unity through language, showing how words can become a tool for peace and global solidarity across borders.
             </p>
         </div>
                 <div id="interactives">
