--- a/enVision-Magazine/enVisionMagazine-l5.html
+++ b/enVision-Magazine/enVisionMagazine-l5.html
@@ -62,15 +62,15 @@
 
     <div class="articles">
         <div class="arti full-arti">
-            <div class="tag">Math </div>
-            <img src="images/romannums.jpg">
-           <h3>Roman Numbers </h3>
+            <div class="tag">languages </div>
+            <img src="images/alphabet.jpg">
+            <h3> The Alphabet: Revolution in Language </h3>
             <p>
-            Roman numerals—like I, V, X, and M—originated in ancient Rome. Simple and practical for trade and record-keeping, they lacked a symbol for zero.<br>
+            The invention of the alphabet transformed human communication. Unlike earlier complex writing systems, alphabets reduced language into simple symbols representing sounds.<br>
             <br>
-            This made complex math difficult. Yet, they lasted for centuries and are still seen today on clocks, book chapters, and movie titles.<br>
+            The Phoenician alphabet, developed around 1200 BCE, spread through trade and influenced Greek and Latin scripts, forming the foundation of many modern languages. This innovation made writing accessible, fostering literacy, record-keeping, and cultural exchange.<br>
             <br>
-            Though replaced by Hindu-Arabic numerals, Roman numbers remind us of Rome’s lasting influence—elegant, symbolic, and eternal in stone and tradition
+            It allowed stories, laws, and knowledge to be preserved and shared widely, shaping civilizations. The alphabet’s impact endures today, powering education, literature, and digital communication. By simplifying expression, it unlocked humanity’s potential to think, share, and connect across generations and cultures.
             </p>
         </div>
                 <div id="interactives">
