--- a/enVision-Magazine/enVisionMagazine-m4.html
+++ b/enVision-Magazine/enVisionMagazine-m4.html
@@ -63,14 +63,14 @@
     <div class="articles">
         <div class="arti full-arti">
             <div class="tag">Math </div>
-            <img src="images/romannums.jpg">
-           <h3>Roman Numbers </h3>
+            <img src="images/infinity.jpg">
+            <h3> Infinity in Mathematics: Endless Possibilities </h3>
             <p>
-            Roman numerals—like I, V, X, and M—originated in ancient Rome. Simple and practical for trade and record-keeping, they lacked a symbol for zero.<br>
+            Infinity, a concept stretching beyond all limits, has fascinated mathematicians and philosophers for centuries. In mathematics, it represents quantities larger than any number, yet it is not a number itself.<br>
             <br>
-            This made complex math difficult. Yet, they lasted for centuries and are still seen today on clocks, book chapters, and movie titles.<br>
+            The ancient Greeks grappled with infinity in geometry, while modern mathematics, through Georg Cantor, explored infinite sets and their paradoxes. Infinity appears in calculus, where it helps describe limits and unbounded growth, and in cosmology, where it raises questions about the universe’s size.<br>
             <br>
-            Though replaced by Hindu-Arabic numerals, Roman numbers remind us of Rome’s lasting influence—elegant, symbolic, and eternal in stone and tradition
+            The idea of infinity challenges the human mind, reminding us that some truths may lie beyond complete understanding, yet remain essential to mathematical progress.
             </p>
         </div>
                 <div id="interactives">
