--- a/enVision-Magazine/enVisionMagazine-m5.html
+++ b/enVision-Magazine/enVisionMagazine-m5.html
@@ -63,14 +63,14 @@
     <div class="articles">
         <div class="arti full-arti">
             <div class="tag">Math </div>
-            <img src="images/romannums.jpg">
-           <h3>Roman Numbers </h3>
+            <img src="images/Pythagoras.jpg">
+            <h3> Pythagoras’ Theorem: A Mathematical Classic </h3>
             <p>
-            Roman numerals—like I, V, X, and M—originated in ancient Rome. Simple and practical for trade and record-keeping, they lacked a symbol for zero.<br>
+           The Pythagorean theorem, attributed to the Greek philosopher Pythagoras, states that in a right-angled triangle, the square of the hypotenuse equals the sum of the squares of the other two sides.<br>
             <br>
-            This made complex math difficult. Yet, they lasted for centuries and are still seen today on clocks, book chapters, and movie titles.<br>
+            This simple relation, expressed as a² + b² = c², is one of the most fundamental results in geometry. Used for centuries in construction, navigation, and astronomy, it shows the power of mathematics to describe the physical world.<br>
             <br>
-            Though replaced by Hindu-Arabic numerals, Roman numbers remind us of Rome’s lasting influence—elegant, symbolic, and eternal in stone and tradition
+            Its applications extend into modern fields like physics and computer graphics. The theorem reflects the timeless blend of logic and beauty, highlighting how simple truths can shape complex realities.
             </p>
         </div>
                 <div id="interactives">
